--- a/css/developer-style.css
+++ b/css/developer-style.css
@@ -10,6 +10,10 @@ body {
 	background: -webkit-gradient(linear,left top,right top,from(#c5ccd4), color-stop(71%, #c5ccd4), color-stop(72%, #cbd2d8), to(#cbd2d8));
 	-webkit-touch-callout: none;
 }
+
+#searchresults {
+	z-index:999;
+}
 .center {
 	margin: auto;
 	display: block;
